--- a/Validation/validate_cluster_c3_3r.Rmd
+++ b/Validation/validate_cluster_c3_3r.Rmd
@@ -27,7 +27,7 @@ Models: random treatment effects.
 
 ```{r knit.options, echo = FALSE}
 # by default, all code chunks will cache their results
-knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE)
+knitr::opts_chunk$set(cache = TRUE, warning = FALSE, message = FALSE, echo = FALSE)
 ```
 
 ```{r setup}
@@ -56,7 +56,7 @@ user.params.list[['ICC.2']] <- rep(0.1, M)
 user.params.list[['ICC.3']] <- rep(0.1, M)
 
 # what we assume for validation
-user.params.list[['S']] <- 1000
+sim.params.list[['S']] <- 1000
 
 params.default <- user.params.list
 ```
