updated WY validation document

--- a/Validation/validate_wy.Rmd
+++ b/Validation/validate_wy.Rmd
@@ -35,12 +35,20 @@ panderOptions('round', 3)
 
 # simulation and user parameters
 source(here::here("Validation/Simulations", "params.R"))
-user.params.default <- user.params.list
-sim.params.list[['procs']] <- c("Bonferroni", "BH", "Holm", "WY-SS", "WY-SD")
-sim.params.list[['S']] <- 200
-sim.params.list[['Q']] <- 1
-sim.params.list[['B']] <- 200
 
+sim.params.list[['procs']] <- c("Bonferroni", "BH", "Holm", "WY-SS")
+
+# defaults
+sim.params.list[['S']] <- 500
+sim.params.list[['Q']] <- 1
+sim.params.list[['B']] <- 3000
+
+user.params.list[['ATE_ES']] <- rep(0.125, M)
+user.params.list[['nbar']] <- 50
+user.params.list[['J']] <- 20
+user.params.list[['K']] <- 10
+
+user.params.default <- user.params.list
 sim.params.default <- sim.params.list
 ```
 
@@ -55,6 +63,12 @@ user.params.list[['ICC.3']] <- NULL
 user.params.list[['omega.3']] <- NULL
 user.params.list[['R2.3']] <- NULL
 user.params.list[['nbar']] <- 50
+
+# to get good WY results
+user.params.list[['J']] <- 60
+
+# so power isn't too high
+user.params.list[['ATE_ES']] <- rep(0.1, M)
 ```
 
 Constant effects
@@ -88,53 +102,114 @@ blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_i1_2r_power_plot)
 ```
 
-```{r rho0}
-rho.default <- 0
-default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
-user.params.list[['rho.default']] <- rho.default
-user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
-user.params.list[['rho.u0']] <- user.params.list[['rho.u1']] <- user.params.list[['rho.r']] <- default.rho.matrix
+## No discrepancy
+
+Large $B = 10000$ and large $J = 100$
+
+```{r largeB}
+sim.params.list[['B']] <- 10000
+user.params.list[['J']] <- 100
 ```
 
-Constant effects, $\rho = 0$
+Constant effects
 
-```{r blocked.2c.rho0}
+```{r blocked.2c.largeB}
 design <- "blocked_i1_2c"
 user.params.list[['omega.2']] <- 0
 user.params.list[['ICC.2']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
-blocked_i1_2c_rho0_power_plot <- gen.power.results.plot(params.file.base, design)
-print(blocked_i1_2c_rho0_power_plot)
+blocked_i1_2c_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2c_power_plot)
 ```
 
-Fixed effects, $\rho = 0$
+Fixed effects
 
-```{r blocked.2f.rho0}
+```{r blocked.2f.largeB}
 design <- "blocked_i1_2f"
 user.params.list[['omega.2']] <- user.params.default[['omega.2']]
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
-blocked_i1_2f_rho0_power_plot <- gen.power.results.plot(params.file.base, design)
-print(blocked_i1_2f_rho0_power_plot)
+blocked_i1_2f_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2f_power_plot)
 ```
 
-Random effects, $\rho = 0$
+Random effects
 
-```{r blocked.2r.rho0}
+```{r blocked.2r.largeB}
 design <- "blocked_i1_2r"
 user.params.list[['ICC.2']] <- user.params.default[['ICC.2']]
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
-blocked_i1_2r_rho0_power_plot <- gen.power.results.plot(params.file.base, design)
-print(blocked_i1_2r_rho0_power_plot)
+blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_power_plot)
+```
+
+Random effects with large $B = 10000$ and large $J = 100$ with lower power
+
+```{r blocked.2r.largeB.lowpower}
+design <- "blocked_i1_2r"
+user.params.list[['nbar']] <- 100
+user.params.list[['ATE_ES']] <- rep(0.05, M)
+
+user.params.list[['ICC.2']] <- user.params.default[['ICC.2']]
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_power_plot)
+```
+
+## Different combinations of $B$ and $J$
+
+Random effects with small $J = 15$ and medium $B = 3000$
+
+```{r blocked.2r.smallJ}
+design <- "blocked_i1_2r"
+user.params.list[['J']] <- 15
+sim.params.list[['B']] <- 3000
+user.params.list[['ATE_ES']] <- rep(0.1, M)
+user.params.list[['nbar']] <- 50
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_power_plot)
+```
+
+Random effects with small $B = 200$ and large $J = 60$
+
+```{r blocked.2r.smallB}
+design <- "blocked_i1_2r"
+user.params.list[['J']] <- 60
+sim.params.list[['B']] <- 200
+user.params.list[['ATE_ES']] <- rep(0.1, M)
+user.params.list[['nbar']] <- 50
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_power_plot)
 ```
 
 
+Random effects with large $B = 10000$ and small $J = 20$
 
-```{r rho.reset}
-rho.default <- user.params.default[['rho.default']]
-user.params.list[['rho.default']] <- rho.default
-default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
-user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
-user.params.list[['rho.u0']] <- user.params.list[['rho.u1']] <- user.params.list[['rho.r']] <- default.rho.matrix
+```{r blocked.2r.largeB.smallJ}
+design <- "blocked_i1_2r"
+sim.params.list[['B']] <- 10000
+user.params.list[['J']] <- 20
+user.params.list[['nbar']] <- 50
+user.params.list[['ATE_ES']] <- rep(0.125, M)
+user.params.list[['ICC.2']] <- user.params.default[['ICC.2']]
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_power_plot)
+```
+
+Random effects with large $B = 10000$ and medium $J = 30$
+
+```{r blocked.2r.largeB.medJ}
+design <- "blocked_i1_2r"
+sim.params.list[['B']] <- 10000
+user.params.list[['J']] <- 30
+user.params.list[['nbar']] <- 50
+user.params.list[['ATE_ES']] <- rep(0.125, M)
+user.params.list[['ICC.2']] <- user.params.default[['ICC.2']]
+params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
+blocked_i1_2r_power_plot <- gen.power.results.plot(params.file.base, design)
+print(blocked_i1_2r_power_plot)
 ```
 
 # Cluster 2 level
@@ -153,7 +228,8 @@ user.params.list[['omega.2']] <- 0
 # params to help have a decent power
 user.params.list[['ICC.2']] <- rep(0.1, M)
 user.params.list[['J']] <- 60
-  
+user.params.list[['ATE_ES']] <- rep(0.25, M)
+
 design <- "simple_c2_2r"
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 simple_c2_2r_power_plot <- gen.power.results.plot(params.file.base, design)
@@ -164,14 +240,13 @@ print(simple_c2_2r_power_plot)
 
 ```{r blocked.3r}
 user.params.list <- user.params.default
+sim.params.list <- sim.params.default
 
 # for a reasonable runtime
-# user.params.list[['J']] <- 10
-# user.params.list[['K']] <- 5
-# user.params.list[['nbar']] <- 20
-# sim.params.list[['B']] <- 200
-# user.params.list[['S']] <- 20
-
+user.params.list[['J']] <- 20
+user.params.list[['K']] <- 20
+user.params.list[['nbar']] <- 20
+    
 design <- "blocked_i1_3r"
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_i1_3r_power_plot <- gen.power.results.plot(params.file.base, design)
@@ -190,9 +265,8 @@ user.params.list[['omega.2']] <- 0
 user.params.list[['omega.3']] <- 0
 
 # for a reasonable runtime and power
-# user.params.list[['J']] <- 10
-# user.params.list[['K']] <- 5
-# user.params.list[['nbar']] <- 20
+user.params.list[['J']] <- 40
+user.params.list[['K']] <- 20
 user.params.list[['ATE_ES']] <- rep(0.25, M)
 user.params.list[['ICC.3']] <- rep(0.1, M)
 user.params.list[['ICC.2']] <- rep(0.1, M)
@@ -207,16 +281,7 @@ print(simple_c3_3r_power_plot)
 
 ```{r blocked.cluster}
 user.params.list <- user.params.default
-
 user.params.list[['omega.2']] <- 0
-
-# for a reasonable runtime and power
-# user.params.list[['J']] <- 10
-# user.params.list[['K']] <- 5
-# user.params.list[['nbar']] <- 20
-# user.params.list[['ATE_ES']] <- rep(0.25, M)
-# user.params.list[['ICC.3']] <- rep(0.1, M)
-# user.params.list[['ICC.2']] <- rep(0.1, M)
 ```
 
 Blocked cluster, fixed effects
@@ -236,6 +301,15 @@ Blocked cluster, random effects
 design <- "blocked_c2_3r"
 user.params.list[['R2.3']] <- user.params.default[['R2.3']]
 user.params.list[['ICC.3']] <- user.params.default[['ICC.3']]
+
+# for a reasonable runtime and power
+user.params.list[['J']] <- 15
+user.params.list[['K']] <- 15
+user.params.list[['nbar']] <- 30
+user.params.list[['ATE_ES']] <- rep(0.25, M)
+# user.params.list[['ICC.3']] <- rep(0.1, M)
+# user.params.list[['ICC.2']] <- rep(0.1, M)
+
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3r_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3r_power_plot)
