--- a/ManuScript/PUMP Manuscript.Rmd
+++ b/ManuScript/PUMP Manuscript.Rmd
@@ -10,12 +10,31 @@ Power Under Multiplicity Project (PUMP): An R package for estimating statistical
 Draft outline
 
 # Introduction
-* Available software for estimating statistical power, MDES and sample sizes for RCT's in education research
-- world of modest number of outcomes (relative to some science applications)
-* Brief summary of the multiple testing problem
 
-TESTING!
+## Overview
 
+Researchers are often interested in testing the effectiveness of an intervention on multiple outcomes, for multiple subgroups, at multiple points in time, or across multiple treatment groups. The resulting multiplicity of statistical hypothesis tests can lead to spurious findings of effects. Multiple testing procedures (MTPs) are statistical procedures that counteract this problem by adjusting p-values for effect estimates upward. When not using an MTP, the probability of false positive findings increases, sometimes dramatically, with the number of tests. When using an MTP, this probability is reduced.
+
+However, an important consequence of MTPs is a change in statistical power that can be substantial. That is, the use of MTPs changes the probability of detecting effects when they truly exist, compared with the situation when the multiplicity problem is ignored. Unfortunately, while researchers are increasingly using MTPs, they frequently ignore the power implications of their use when designing studies. Consequently, in some cases sample sizes may be too small, and studies may be underpowered to detect effects as small as a desired size. In other cases, sample sizes may be larger than needed, or studies may be powered to detect smaller effects than anticipated.
+
+Researchers typically worry that moving from one to multiple hypothesis tests and thus employing MTPs results in a loss of power. However, that need not always be the case. Power is indeed lost if one focuses on individual power — the probability of detecting an effect of a particular size or larger for each particular hypothesis test, given that the effect truly exists. However, in studies with multiplicity, alternative definitions of power exist and in some cases may be more appropriate (Chen, Luo, Liu, & Mehrotra, 2011; Dudoit, Shaffer, & Bodrick, 2003; Senn & Bretz, 2007; Westfall, Tobias, & Wolfinger, 2011). For example, when testing for effects on multiple outcomes, one might consider 1-minimal power: the probability of detecting effects of at least a particular size (which can vary by outcome) on at least one outcome. Similarly, one might consider 1⁄2-minimal power: the probability of detecting effects of at least a particular size on at least 1⁄2 of the outcomes. Also, one might consider complete power: the power to detect effects of at least a particular size on all outcomes. The choice of definition of power depends on the objectives of the study and on how the success of the intervention is defined. The choice of definition also affects the overall extent of power.
+
+The methodological developments implemented in our R package, PUMP, and described in this paper are focused on the multiplicity problem that arises in randomized control trials (RCT's) that test an intervention's impacts on a modest number of outcomes. For example, in education research might design a trial to investigate the effects of a mentoring program on three outcomes related to social and emotional development --- measures of social competence, emotional competence and self-regulation. For this type of research, the literature and tools tools for estimating statistical power, or for estimating sample size requirements of minimum detectable effect sizes (MDES's) that achieve a desired level of statistical power, are extensive.^[For example, power estimating tools frequently used in social science research include Dong & Maynard, 2013; Hedges & Rhoads, 2010; Raudenbush et al., 2011; Spybrook et al., 2011).] However, to our knowledge, no tools exist that take multiplicity into account.
+
+The PUMP package fills this gap. It allows users to estimate statistical power, sample size requirements or MDES's for multiple definitions of statistical power, when applying any of five common MTPs --- Bonferroni, Holm, single-step and step-down versions of Westfall-Young, and Benjamini-Hochberg and when using any of the following RCT designs: 
+- Blocked individual random assignment
+   - Constant effects model (2 levels - e.g., students blocked within teachers)
+   - Fixed effects model (2 levels and 3 levels - e.g., students blocked within teachers within schools)
+   - Random effects model (2 levels, 3 levels)
+- Cluster random assignment
+   - 2-level model (treatment at Level 2 - e.g., at teacher level)
+   - 3-level model (treatment at Level 3 - e.g., at school level)
+- Blocked cluster random assignment
+   - 3-level fixed-effects model (treatment at Level 2)
+   - 3-level random-effects model (treatment at Level 2)
+
+
+## Review of the multiple testing problem in a frequentist framework 
 
 This paper focuses on the frequentist framework of hypothesis testing, as it is currently the prevailing framework in education and social policy research. Under this framework, the treatment and control groups in an RCT are considered random samples from a defined population (assumed to be the same across all blocks under the assumed design). Following the Rubin-Neyman counterfactual framework (Neyman, 1923; Rubin, 1974, 2006), $Y0_i(m)$ is the $m^{th}$ of $M$ outcomesfor individual $i$ when not exposed to the treatment, and $Y1_i(m)$ is the $m^{th}$ of $M$ outcomes for individual $i$ when exposed to treatment. Then the population average treatment on the th m outcome, given by
 
